--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>git</artifactId>
-            <version>2.6.2-beta-1</version>
+            <version>3.5.0</version>
             <exclusions>
                 <!-- To avoid ClassNotFoundException during InjectedTest -->
                 <exclusion>
